Fix: Use camilladsp_install_dir variable consistently instead of hardcoded paths

--- a/roles/camilladsp/templates/camilladsp.service.j2
+++ b/roles/camilladsp/templates/camilladsp.service.j2
@@ -6,8 +6,8 @@ After=network.target sound.target
 Type=simple
 User={{ camilladsp_user }}
 Group={{ camilladsp_group }}
-ExecStart=/home/{{ camilladsp_user }}/camilladsp/bin/camilladsp -p1234 -w -s /home/{{ camilladsp_user }}/camilladsp/statefile.yml
-WorkingDirectory=/home/{{ camilladsp_user }}/camilladsp
+ExecStart={{ camilladsp_install_dir }}/bin/camilladsp -p1234 -w -s {{ camilladsp_install_dir }}/statefile.yml
+WorkingDirectory={{ camilladsp_install_dir }}
 Restart=on-failure
 RestartSec=5
 StandardOutput=journal
