--- a/roles/camilladsp/templates/camillagui.service.j2
+++ b/roles/camilladsp/templates/camillagui.service.j2
@@ -7,8 +7,8 @@ Requires=camilladsp.service
 Type=simple
 User={{ camilladsp_user }}
 Group={{ camilladsp_group }}
-ExecStart=/home/{{ camilladsp_user }}/camilladsp/camillagui_venv/bin/python /home/{{ camilladsp_user }}/camilladsp/gui/main.py
-WorkingDirectory=/home/{{ camilladsp_user }}/camilladsp
+ExecStart={{ camilladsp_install_dir }}/camillagui_venv/bin/python {{ camilladsp_install_dir }}/gui/main.py
+WorkingDirectory={{ camilladsp_install_dir }}
 Restart=on-failure
 RestartSec=5
 StandardOutput=journal
